[package]
name = "ecfft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ff = { version = "0.13", features = ["derive"] }
num-bigint = "0.4.3"
num-integer = "0.1.45"
num-traits = "0.2.16"
rand = "0.8.5"
