[package]
name = "ecfft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
halo2curves = "0.1.0"
rand = "0.8.5"

[[example]]
name = "find_curve"
path = "examples/find_curve.rs"

[[example]]
name = "extend"
path = "examples/extend.rs"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "bench"
harness = false